<resources>
    <string name="app_name">project 2</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="select_user">Select User</string>
    <string name="online">Online</string>
    <string name="nameOrEmail">Name Or Email</string>
</resources>